<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/HomeBG"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/highScore_bar"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imageView1"
            android:text="@string/high_score"
            android:textColor="@color/Red"
            android:textSize="@dimen/high_score_activity_textsize"
            android:singleLine="true"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/logo" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:background="@color/Dark"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewRank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="@dimen/high_score_activity_textsizemargin"
            android:text="@string/rank"
            android:textColor="@color/txtColorGreen"
            android:textSize="@dimen/high_score_activity_textsizesmall"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/high_score_activity_textsizemargin"
            android:text="@string/score"
            android:textColor="@color/txtColorGreen"
            android:textSize="@dimen/high_score_activity_textsizesmall"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/high_score_activity_textsizemargin"
            android:text="@string/name"
            android:textColor="@color/txtColorGreen"
            android:textSize="@dimen/high_score_activity_textsizesmall"
            android:textStyle="bold" />
    </RelativeLayout>

    <ListView
        android:id="@+id/listViewHighScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1" >
    </ListView>

</RelativeLayout>